# pynigma

./: README.md  pynigma.py  pyproject.toml
pynigma/: base.py  base_enigma.py  common.py  constants.py  enigma.py  hola.md  instances.py  permutation_block.py  plugboard.py  reflector.py  rotor.py  rotor_instances.py
pynigma/tests/: test_enigma.py  test_plugboard.py  test_reflector.py  test_rotor.py
